--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>React App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Enable Javascript for this application</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
@@ -40,4 +40,5 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+
 </html>
