--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="El Paso based home audio and video installation company. Modernize your home today with a professionally setup home theatre system!"
+    />
+    <meta
+      name="google-site-verification"
+      content="3c-Km9PQkIaTP9FGqqNSiJ0eUjYBR6Q0FlXnd-RKBSE"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
